# openday-scavenger

./: .djlint_rules.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  scavenger_hunt.db
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.e2e.yml  docker-compose.yml
.github/workflows/: e2e.yaml  pytest.yaml
e2e/: .gitignore  README.md  cypress.config.mjs  eslint.config.mjs  package-lock.json  package.json
e2e/cypress/e2e/: full-e2e.cy.js
e2e/cypress/fixtures/: puzzle_seed_data.json
e2e/cypress/support/: commands.js
openday_scavenger/: __init__.py  config.py  main.py
openday_scavenger/admin/: views.py
openday_scavenger/api/: custom_responses.py  db.py  qr_codes.py
openday_scavenger/api/map/: schemas.py  service.py
openday_scavenger/api/puzzles/: dependencies.py  exceptions.py  models.py  schemas.py  service.py
openday_scavenger/api/visitors/: dependencies.py  exceptions.py  models.py  schemas.py  service.py
openday_scavenger/game/: models.py  schemas.py  views.py
openday_scavenger/puzzles/: __init__.py
openday_scavenger/puzzles/ads_question_answer_matchup/: views.py
openday_scavenger/puzzles/ads_question_answer_matchup/static/: ads_question_answer_matchup.css  index.html
openday_scavenger/puzzles/ant/: views.py
openday_scavenger/puzzles/ant/static/: index.html  styles.css
openday_scavenger/puzzles/controls_game/: views.py
openday_scavenger/puzzles/controls_game/static/: index.html
openday_scavenger/puzzles/cube/: puzzle_form.html  views.py
openday_scavenger/puzzles/cube/static/: index.html
openday_scavenger/puzzles/demo/: views.py
openday_scavenger/puzzles/demo/static/: demo.css  index.html
openday_scavenger/puzzles/element/: services.py  views.py
openday_scavenger/puzzles/element/templates/: form.html  index.html  mobile_guide.html  periodic_table.html  popup.html  question.html
openday_scavenger/puzzles/finder/: finder_populate_db.py  views.py
openday_scavenger/puzzles/finder/static/: index.html  styles.css
openday_scavenger/puzzles/finder/templates/: index.html  (+3 more)
openday_scavenger/puzzles/fourbyfour/: exceptions.py  service.py  views.py
openday_scavenger/puzzles/imagereveal/: .gitignore  views.py
openday_scavenger/puzzles/labelthemap/: views.py
openday_scavenger/puzzles/map/: views.py
openday_scavenger/puzzles/newbuildings/: views.py
openday_scavenger/puzzles/periodic/: services.py  views.py
openday_scavenger/puzzles/shuffleanagram/: service.py  views.py
openday_scavenger/puzzles/synchrotron_question/: views.py
openday_scavenger/puzzles/xray_filters/: views.py
openday_scavenger/static/css/: openday.css
openday_scavenger/static/html/: 403_disabled_puzzle.html  404.html  404_general.html  404_invalid_uid.html  404_unknown_puzzle.html  410_completed_puzzle.html  index.html  layout.html
openday_scavenger/static/js/: Sortable.js
openday_scavenger/views/: game.py
openday_scavenger/views/admin/: __init__.py  admin.py  map.py  puzzles.py  responses.py  views.py  visitors.py
openday_scavenger/views/game/: game.py
tests/: conftest.py
tests/api/puzzles_tests/: dependencies_test.py  service_test.py
tests/api/visitor_tests/: visitor_route_test.py
tests/puzzle_tests/fourbyfour/: conftest.py  test_endpoints.py  test_service.py
tests/puzzle_tests/shuffleanagram/: conftest.py  test_endpoints.py  test_service.py
tests/visitor_tests/: visitor_route_test.py  visitor_service_test.py
(+80 files in other folders)
