[project]
name = "openday-scavenger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.114.0",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.32",
    "segno>=1.6.1",
    "reportlab>=4.2.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pyright>=1.1.379",
    "ruff>=0.6.4",
]

[tool.ruff]
line-length = 100
lint.extend-select = ["I"]
