[project]
name = "openday-scavenger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.114.0",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.32",
    "segno>=1.6.1",
    "reportlab>=4.2.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
postgres = [
    "psycopg2>=2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "mypy>=1.11.2",
    "pyright>=1.1.379",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]

[tool.ruff]
line-length = 100
lint.extend-select = ["I"]

[tool.pytest.ini_options]
addopts = "--cov=openday_scavenger --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["openday_scavenger"]

[tool.coverage.report]
show_missing = true
fail_under = 60
