[project]
name = "openday-scavenger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "fastapi[standard]>=0.114.0",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.32",
    "segno>=1.6.1",
    "reportlab>=4.2.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "plotly>=5.24.1",
    "pandas>=2.2.3",
    "qrcode-artistic>=3.0.2",
]

[project.optional-dependencies]
postgres = [
    "psycopg2>=2.9.9",
]

finder = [
    "word-search-generator>=3.5.1",
]

imagereveal = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pillow>=10.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "mypy>=1.11.2",
    "pyright>=1.1.379",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.4",
    "djlint>=1.35.2"
]

[tool.ruff]
line-length = 100
lint.extend-select = ["I"]

[tool.pytest.ini_options]
addopts = "--cov=openday_scavenger --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["openday_scavenger"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.djlint]
# TODO: Enforce viewport?
# Just the 'critical' rules for now. At some point we can enable
# the full rule set and maybe even enforce formatting of html/templates
# like we do with python files 
ignore="H030,H031,J004,H008,J018,H029,H006,H025,H021,T001,T002,T003"
profile="jinja"
